# kinara-reboot

./: .gitmodules  CMakeLists.txt
attic/: String.cpp  String.hpp  StringRepr.cpp  StringTable.hpp  StringTests.cpp
build-system/: action.py  component.py  configtester.py  configuration.py  configure.py  find_builders.py  kinara_configure.py  test.py
cmake-modules/: ConfigureCompiler.cmake  KinaraTests.cmake  ModuleUtilFunc.cmake  RunConfigurationTests.cmake
cmake-modules/cmake-tests/: test-64-bit.cpp  test-lto.cpp  test-sse-4.2.py
config-includes/: KinaraConfig.h.in
config-tests/: README  test-64-bit-pass-fail.cpp  test-sse-4.1-feature-test.py
projects/kinara-common/src/allocators/: CMakeLists.txt  MemoryManager.cpp  MemoryManager.hpp  PoolAllocator.cpp  PoolAllocator.hpp  SmallBlockAllocator.cpp  SmallBlockAllocator.hpp
projects/kinara-common/src/basetypes/: CMakeLists.txt  Comparators.hpp  KinaraBase.hpp  KinaraErrors.cpp  KinaraErrors.hpp  KinaraTypes.cpp  KinaraTypes.hpp  KinaraTypesFwd.hpp
projects/kinara-common/src/containers/: BitSet.cpp  BitSet.hpp  CMakeLists.txt  ContainersBase.hpp  DList.hpp  DListTypes.hpp  Deque.hpp  DequeTypes.hpp  HashTable.hpp  HashTableTypes.hpp  HeapCommon.hpp  IteratorBase.hpp  MultiWayHeap.hpp  OpenAddressingHashTable.hpp  OrderedHashTable.hpp  OrderedMap.hpp  OrderedSet.hpp  PrimeGenerator.hpp  PriorityQueue.hpp  Queue.hpp  SList.hpp  SListTypes.hpp  SequenceHeap.hpp  Stack.hpp  StaticBitSet.hpp  String.cpp  String.hpp  StringBuffer.cpp  StringBuffer.hpp  StringRepr.cpp  StringRepr.hpp  StringTable.cpp  StringTable.hpp  UnorderedMap.hpp  UnorderedSet.hpp  Vector.hpp
projects/kinara-common/src/hashfuncs/: CMakeLists.txt  CityCRC.hpp  CityHash.cpp  CityHash.hpp  FNV.cpp  FNV.hpp  Hash.hpp  HashFunctions.hpp  MurmurHash.cpp  MurmurHash.hpp  SpookyHash.cpp  SpookyHash.hpp
projects/kinara-common/src/memory/: ManagedPointer.hpp  RefCountable.hpp
projects/kinara-common/src/primeutils/: CMakeLists.txt  PrecomputedPrimeList.hpp  PrimeGenerator.cpp  PrimeGenerator.hpp
projects/kinara-common/src/timers/: CMakeLists.txt  HashTable.hpp  Timers.cpp  Timers.hpp
projects/kinara-compiler/src/expr/: Expressions.hpp
projects/kinara-compiler/src/streams/: CPlusPlusCodeWriter.hpp
projects/libkinara-utils/src/memory/: RefCountable.hpp
scripts/: gen_primes.py
src/allocators/: MemoryManager.hpp
src/common/: KinaraBase.hpp
src/containers/: IteratorBase.hpp
src/memory/: ManagedPointer.hpp
tests/unit-tests/: DListTests.cpp  DequeTests.cpp  OrderedMapTests.cpp  OrderedSetTests.cpp  PrimeGeneratorTest.cpp  PriorityQueueTests.cpp  RCClass.hpp  SListTests.cpp  StringTests.cpp  UnorderedMapTests.cpp  UnorderedSetTests.cpp  VectorTests.cpp
